# fast-replace-patterns

./: Cargo.toml
benches/: str.rs
src/: lib.rs
